# uchoose

./: .gitignore  Cargo.toml  Makefile  README.adoc  TODO  browser.py  chooser.ui  classifiers  cli.py  font_test.py  gui_gtk3.py  gui_qt.py  org.allandaemon.uchoose.desktop  providers.py  requirements.txt  setup.py  u  uchoose.desktop  uchoose.py  uor.desktop  uor.py
cpp/: gui_qt.cpp  gui_qt.h  gui_qt.ui  main.cpp  uchoose.h  uchoose.pro
src/: clipboard_xclip.rs  execution.rs
src/ui/: mod.rs  ui_cli.rs  ui_gtk4.rs
uchoose/: cli.py  clipboard.py  font_test.py  gui_gtk3.py  gui_qt.py  providers.py  uchoose.py  ui_cli.py  ui_gtk3.py  ui_qt5.py  ui_qt6.py
uchoose-rs/: Cargo.toml  TODO.md
uchoose-rs/src/: clipboard_xclip.rs  execution.rs  main.rs  providers.rs
uchoose-rs/src/ui/: mod.rs  ui_cli.rs  ui_gtk4.rs  ui_iced.rs  ui_ratatui.rs  ui_relm4.rs  ui_tui_realm.rs
