[package]
name = "uchoose"
version = "0.5.0"
edition = "2021"
authors = ["Allan Daemon"]
description = "Utility to choose how to open a URL instead of a default browser"
repository = "https://github.com/AllanDaemon/uchoose"
license = 'GPL-3.0-or-later'
keywords = ['browser', 'default', 'url opener', 'freedesktop', 'xdg']


[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
rust-ini = "0.21.1"
gtk = { version = "0.9.1", package = "gtk4", features = [
	"v4_14",
], optional = true }
relm4 = { version = "0.9.0", optional = true }
relm4-components = { version = "0.9.1", optional = true }
arboard = { version = "3.4.1", optional = true }
cli-clipboard = { version = "0.4.0", optional = true }
shlex = { version = "1.3.0", optional = true }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", optional = true }


[features]
default = ["xclip", "arboard", "gtk4", "relm4"]

xclip = ["dep:shlex"]
arboard = ["dep:arboard"]
clipboard_extras = ["dep:cli-clipboard", "gtk4"]
clipboard_all = ["xclip", "arboard", "clipboard_extras"]

gtk4 = ["dep:gtk"]
relm4 = ["gtk4", "dep:relm4", "dep:relm4-components"]
iced = ["dep:iced"]
